# ggid

./: .dockerignore  .dockerignore.bak  .env.example  .gitignore  .gitmodules  .golangci.yml  CHANGELOG.md  CONTRIBUTING.md  GGCODE.md  LICENSE  Makefile  README.md  README.zh-CN.md  apply_i18n.py  apply_i18n_big1.js  apply_i18n_big1.py  audit_texts.py  buf.gen.yaml  dev-start.sh  e2e-test.sh  fix_titles.py  go.mod  go.sum  package-lock.json
console/: .env.example  Dockerfile  INTERACTION-TEST.md  PERFORMANCE.md  README.md  UX-GUIDE.md  next.config.js  next.config.mjs  next.config.ts  package-lock.json  package.json  playwright.config.ts  tailwind.config.js  tsconfig.json  tsconfig.tsbuildinfo
deploy/: .env.example  PRODUCTION.md  docker-compose.prod.yaml  docker-compose.yaml  docker-compose.yml  (+11 more)
sdk/python/: README.md  pyproject.toml  setup.py
sdk/python/examples/: quickstart.py
sdk/python/examples/oauth-demo/: Dockerfile  README.md  app.py  oauth-demo.py
sdk/python/examples/saml-demo/: app.py  saml-demo.py
sdk/python/ggid/: __init__.py  client.py  jwt.py  jwt_verifier.py  middleware.py  passkey.py  saml.py
sdk/python/tests/: test_sdk.py
sdk/rust/: .gitignore  Cargo.toml  README.md
sdk/rust/examples/: quickstart.rs
sdk/rust/examples/oauth-demo/: Cargo.toml  Dockerfile
sdk/rust/examples/oauth-demo/src/: main.rs
sdk/rust/examples/saml-demo/: Cargo.toml
sdk/rust/examples/saml-demo/src/: main.rs
sdk/rust/src/: abac.rs  auth.rs  client.rs  error.rs  lib.rs  middleware.rs  passkey.rs  rbac.rs  saml.rs  types.rs  users.rs
sdk/rust/tests/: client_test.rs
(+4548 files in other folders)
