[package]
name = "ggid"
version = "0.1.0"
edition = "2021"
description = "GGID IAM SDK for Rust — JWT verification, RBAC/ABAC authorization, OAuth/OIDC"
license = "Apache-2.0"
repository = "https://github.com/ggid/ggid"
keywords = ["iam", "auth", "rbac", "abac", "oauth"]
categories = ["authentication", "web-programming"]

[dependencies]
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
jsonwebtoken = "9"
thiserror = "2"
async-trait = "0.1"
url = "2"
base64ct = { version = "1.6", features = ["alloc"] }
axum = { version = "0.8", optional = true }

[features]
default = []
middleware = ["dep:axum"]

[dev-dependencies]
tokio-test = "0.4"
mockito = "1"

[[example]]
name = "quickstart"
